
2012-08-30  Carsten Haitzler (The Rasterman)

        1.7.0 release

2012-08-31  Christophe Sadoine

       * Added a function: evas_map_util_quat_rotate().

2012-09-02  Vincent Torri

       * Fix seg fault in the esvg loader, latest code is required, and
	 enable it on Windows.

2012-09-03  Igor Murzov

       * Add WEBP loader module and cserve2 binary loader patch.

2012-09-03  Christopher Michael (devilhorns)

       * When doing a move or geometry_get, we need to make sure that we 
	 don't try to do these on the framespace clip object. Also, since we
	 need the evas to get the framespace clip object, just directly use the
	 framespace values from the canvas, rather than function call to get
	 those values.

2012-09-05  ChunEon Park (Hermet)

       * Added EVAS_CALLBACK_IMAGE_RESIZE. Now user have a notify when image data size of the image object is changed.

2012-09-05  Carsten Haitzler (The Rasterman)

       * Fix EGL/GLES bug when setting up rgba dest alpha windows where they
       cease to be rendered to. use a shared context and it works.

2012-09-07  Carsten Haitzler (The Rasterman)

       * Fix image alpha set bug if the image data has not been loaded
       yet from disk. Fixes across software and gl engines needed.
       * Fix map surface leak.

2012-09-14  Carsten Haitzler (The Rasterman)

       * Add env EVAS_GL_NO_BLACKLIST to disable blacklisting.

2012-09-17  Carsten Haitzler (The Rasterman)

       * Add evas_device API for being able to register devices, set
       their names, descriptions, classes, parents, sources etc. etc.

2012-09-20  Carsten Haitzler (The Rasterman)

       * Fix native surface crash when setting to null in some
       situations.

2012-09-24  Sung W. Park (sung_)

	* Refactored Evas GL engine code so wayland_egl and gl_x11 and other
        engines can share the same code. The common codes are in gl_common/
        directory and evas_engine just has to implement a few engine functions.

